# libstress

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  autoclean.sh  autogen.sh  configure.ac  libstress.pc.in
po/: POTFILES.in  update_languages.bash
src/: Makefile.am  libstress.c
src/include/: libstress.h
